fix wrapper alignment

--- a/public/board.css
+++ b/public/board.css
@@ -1,3 +1,8 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: #000;
   color: #EDD434;
@@ -23,6 +28,7 @@ a:hover {
 header {
   display: block
   height: 100px;
+  margin: .5em 0;
   position: absolute; 
   text-align: center;
   width: 1280px;
